<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="horizontal"
    android:padding="30dip" >
    
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:text="@string/main_title"
            android:textColor="@color/matching_dark"
            android:textSize="24.5sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/running" />
        
		<Button
		    android:id="@+id/run_button"
		    android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/run_label" />
		
		<Button
		    android:id="@+id/plan_button"
		    android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/plan_label" />
		
		<Button
		    android:id="@+id/statistics_button"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/statistics_label" />
		
		<Button
		    android:id="@+id/help_button"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/help_label" />
		
		
		
	</LinearLayout>

</LinearLayout>
